third_party/rust/inherent/tests/ui/nonsense-in-default.stderr
error: expected `fn`
  --> $DIR/nonsense-in-default.rs:12:15
   |
12 |         const NONSENSE: usize = 1;
   |               ^^^^^^^^
